# joker-2026

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
data/processed/: location_manual.tsv
docs/: overview.md
notebooks/eda/: BILSTM_phonetic_embeddings.ipynb  Verbose_Pun_Translator_Scalable.ipynb  bilstm_encoder.pth  chain_of_thought_prompting_with_langchain.ipynb  config.ini  evaluating_translations_with_MMTE.ipynb  expunations_eda.ipynb  ranking_translations_with_langchain.ipynb
src/: config.py  contrastive_learning.py  data.py  discriminator.py  embeddings.py  evaluator.py  generator.py  make_combined_tsv.py  preprocessor.py  utils.py
